2001-09-04  Paul Eggert  <eggert@twinsun.com>

	* xgetcwd.c: Revert some of the previous change; intead,
	fix the HAVE_GETCWD_NULL code to behave more like the
	!HAVE_GETCWD_NULL code used to.

	Include "xalloc.h".
	(xgetcwd): Do not return NULL when memory is exhausted; instead,
	invoke xalloc_die.

2001-09-04  Paul Eggert  <eggert@twinsun.com>

	* xreadlink.c (xreadlink): Omit size_t* arg.  All uses changed.
	Use ssize_t, not int, to store result of readlink.
	Check for ssize_t overflow as well as size_t overflow,
	as POSIX says the result of readlink is implementation-defined
	when ssize_t overflows.
	Remove unnecessary cast to char*.
	Use free+malloc instead of realloc, as the storage doesn't need
	to be preserved and it's clearer and can be more efficient that way.
	(SIZE_MAX, SSIZE_MAX): New macros, if <limits.h> doesn't declare.
	* xreadlink.h (xreadlink): Update prototype.

2001-09-03  Paul Eggert  <eggert@twinsun.com>

	* exclude.c (fnmatch_no_wildcards): Fix confusion between
	usage of FNM_CASEFOLD and FNM_LEADING_DIR.  The bug was
	spotted by Jim Meyering.

2001-09-03  Jim Meyering  <meyering@lucent.com>

	* xreadlink.c (xreadlink): Preserve errno around `free' during failure.

2001-09-03  Paul Eggert  <eggert@twinsun.com>

	* xgetcwd.c: Fix the !HAVE_GETCWD_NULL code to behave more
	like the HAVE_GETCWD_NULL code.
	Include pathmax.h if not HAVE_GETCWD.
	Do not include xalloc.h.
	(INITIAL_BUFFER_SIZE): New symbol.
	Do not use xmalloc / xrealloc, since the caller is responsible for
	handling errors.  Preserve errno around `free' during failure.
	Do not overrun buffer when using getwd.

2001-09-03  Paul Eggert  <eggert@twinsun.com>

	* xgetcwd.c (xgetcwd): Use HAVE_GETCWD_NULL, not (defined
	__GLIBC__ && __GLIBC__ >= 2), to decide whether to use getcwd (NULL, 0).

2001-09-02  Jim Meyering  <meyering@lucent.com>

	* error.c: Update from GNU libc.

2001-09-01  Jim Meyering  <meyering@lucent.com>

	* xreadlink.c: New file.
	* xreadlink.h: New file.